[tool.poetry]
name = "workshop-estrutura"
version = "0.1.0"
description = "Estruturando um projeto de dados - Workshop Luciano Filho"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
pytest = "^7.4.3"
isort = "^5.13.2"
blue = "^0.9.1"
pip-audit = "^2.6.1"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
known_third_party = []


[tool.taskipy.tasks]
format = "isort . && blue ."